--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ CLERK_SECRET_KEY=sk_test_L9XqSi21P4KJAaOloVlvK2dEPdFhqtvnibqku6Nt7q
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
+URL_API_PRODUCT=https://product-microservice-mlp.onrender.com/api/store
 
 
 NEXT_PUBLIC_SUPABASE_URL=https://jfwzshiyyvxklcuuzueu.supabase.co
