--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.56.2",
@@ -33,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
