--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
     "recharts": "^2.12.7",
